# fracfocus_data_fetch

./: .env.example  .gitignore  CLAUDE.md  README.md  STATUS.md  main.py  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
app/api/: dependencies.py
app/core/: config.py  database.py  logging.py
app/models/: event_context.py  fracfocus_sync_state.py  iris_station.py  seismic_event.py  swd.py  sync_history.py
app/repositories/: event_context_repository.py  fracfocus_repository.py  fracfocus_sync_state_repository.py  iris_repository.py  seismic_repository.py  swd_repository.py  sync_history_repository.py  sync_state_repository.py
app/schemas/: analysis.py  fracfocus.py  fracfocus_sync.py  iris.py  seismic.py  swd.py  sync_history.py
app/services/: attribution_service.py  coulomb_service.py  csv_ingestion_service.py  download_service.py  event_context_service.py  fracfocus_ingestion_service.py  fracfocus_sync_service.py  h10_service.py  iris_service.py  mc_frac_prior.py  physics_attribution_service.py  sequence_stats.py  sync_service.py  (+3 more)
data/: ground_truth_template.csv
documents/: Delaware_PoC_Data_Plan_Enhanced.docx  FRONTEND_GUIDE.md  Project_Overview.md  Seismic SoW for PoC Draft.docx  analysis_pipeline.md  document_temp.xml  frac_fracfocus_source.md  permian_attribution_Travis_V3 .docx  seismic_iris_source.md  seismic_texnet_source.md  seismic_usgs_source.md  swd_rrc_source.md
notebooklm_sources/: 01_services.txt  02_repositories.txt  03_api.txt  04_models_schemas.txt  05_core_tasks_pipelines.txt
scripts/: calibrate_engine.py
(+13 files in other folders)
